hphp/hack/test/typecheck/attributes/entry_point_locations.php.exp
File "entry_point_locations.php", line 4, characters 3-14:
The __EntryPoint attribute cannot be used on a class. (Typing[4231])
