hphp/hack/test/typecheck/attributes/entry_point_locations.php
<?hh // strict
// Copyright 2004-present Facebook. All Rights Reserved.

<<__EntryPoint>>
class MyClass {
  <<__EntryPoint>>
  public function method(): void {}
}

<<__EntryPoint>>
function entry_point(): void {}
